# crabfeed

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20241024225638_set_up_db.down.sql  20241024225638_set_up_db.up.sql
migrations/2023-11-21-185431_feeds/: down.sql  up.sql
migrations/2024-06-16-022818_main_tables/: down.sql  up.sql
migrations/2024-06-16-023345_help_tables/: down.sql  up.sql
src/: app.rs  config.rs  db.rs  error.rs  event.rs  handlers.rs  lib.rs  main.rs  models.rs  network.rs  prelude.rs  schema.rs  test.db  time.rs  tui.rs
src/app/: mod.rs  tuihtml.rs
src/control/: mod.rs
src/data/: data.rs  db.rs  mod.rs
src/db/: mod.rs  models.rs
src/event/: events.rs  key.rs
src/handlers/: common_key_events.rs  entries.rs  entry.rs  feeds.rs  input.rs  mod.rs
src/ui/: add.rs  components.rs  entries.rs  entry.rs  feeds.rs  mod.rs  tuihtml.rs  ui.rs  util.rs
tests/: unit_tests.rs
