[package]
name = "crabfeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
feed-rs = "1.3.0"
ratatui = "0.23.0"
thiserror = "1.0.49"
tokio = "1.33.0"
diesel = {version = "2.1.3", features = [ "sqlite", "returning_clauses_for_sqlite_3_35" ] }
