[package]
name = "crabfeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "1.3.0"
ratatui = {version = "0.25.0", features = ["all-widgets"]}
thiserror = "1.0.49"
tokio = {version = "1", features = [ "full" ] }
diesel = {version = "2.1.3", features = [ "sqlite", "returning_clauses_for_sqlite_3_35", "chrono" ] }
chrono = "0.4.31"
mime = "0.3.17"
reqwest = "0.11.22"
html2text = "0.6.0"
crossterm = "0.27.0"
clipboard = "0.5.0"
html_parser = "0.7.0"
