[package]
name = "crabfeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "1.3.0"
ratatui = { version = "0.28.1", features = ["all-widgets", "unstable-widget-ref"] }
thiserror = "1.0.49"
tokio = {version = "1", features = [ "full" ] }
chrono = "0.4.31"
mime = "0.3.17"
reqwest = "0.11.22"
html2text = "0.6.0"
crossterm = "0.27.0"
clipboard = "0.5.0"
html_parser = "0.7.0"
serde = "1.0.210"
config = "0.14.0"
sqlx = { version = "0.8.2", features = ["chrono", "runtime-tokio", "sqlite"] }
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
env_logger = "0.11.5"
log = "0.4.22"
